--- a/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
@@ -160,7 +160,54 @@
   </div>
 </ng-container>
 <ng-container *ngIf="tipoContribucion==4">
+  <div class="container-fluid  mx-auto">
+    <div class="row d-flex justify-content-center">
+        <div class=" col-lg-8 col-md-9 col-11 text-center">
+            <div class="card">
+                <h5 class="text-center mb-4">AÑADIR MULTA GENERAL CONTRIBUCION</h5>
 
+                <form class="form-card">
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-4 flex-column d-flex"> <label class="form-control-label px-3">Codigo<span class="text-danger"> *</span></label> <input [disabled]="idFound?true:false" type="text"  name="codigo" placeholder="codigo" [(ngModel)]="contribucionMultas.codigo_contribucion"> </div>
+                        <div class="form-group col-sm-8 flex-column d-flex"> <label class="form-control-label px-3">Descripcion<span class="text-danger"> *</span></label> <input type="text"  name="concepto" placeholder="descripcion" [(ngModel)]="contribucionMultas.concepto_contribucion" > </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Tipo Pago<span class="text-danger"> *</span></label>
+                            <select  [compareWith]="compararPago" name="tipago" [(ngModel)]="contribucionMultas.id_tipo_pago"  style="height: 30px;">
+                                <option [ngValue]="undefined">-- Seleccionar Tipo Pago --</option>
+                                <option *ngFor="let tPago of tipoPagos" [ngValue]="tPago.id_pago">{{tPago.nombre_pago}}</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Concepto<span class="text-danger"> *</span></label>
+                            <select  [compareWith]="compararDescripcion" name="descripcion" [(ngModel)]="contribucionMultas.id_descripcion"  style="height: 30px;">
+                                <option [ngValue]="undefined">-- Seleccionar Concepto --</option>
+                                <option *ngFor="let descripcion of descripciones" [ngValue]="descripcion.id_catalogo">{{descripcion.descripcion}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Tipo Aprovechamiento<span class="text-danger"> *</span></label>
+                            <select  [compareWith]="compararTAprovechamiento" name="tiaprovechamiento" [(ngModel)]="contribucionMultas.id_catalogo"  style="height: 30px;">
+                                <option [ngValue]="undefined">-- Seleccionar Tipo Aprovechamiento --</option>
+                                <option *ngFor="let tAprovechamiento of tAprovechamientos" [ngValue]="tAprovechamiento.id_catalogo">{{tAprovechamiento.descripcion}}</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-4 flex-column d-flex"> <label class="form-control-label px-3">Cantidad<span class="text-danger"> *</span></label> <input type="number"  name="cantidad" placeholder="cantidad" [(ngModel)]="contribucionMultas.cantidad"> </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3"><span class="text-danger"> </span></label><button #buttonCrear [disabled]="vacioMultas()" [ngClass]="buttonCrear.disabled?'btn btn-secondary disabled':''" type="submit" class="btn-block btn-primary" (click)='crearMultas()' *ngIf="!idFound else elseBlock">Agregar</button> </div>
+                        <div class="form-group col-sm-4 flex-column d-flex">
+                            <button type="button" class="btn-block btn-danger" (click)='irMultas()'  >Cancelar</button>
+                        </div>
+                        <ng-template #elseBlock>
+                            <button #buttonUpdate [disabled]="vacioMultas()" [ngClass]="buttonUpdate.disabled?'btn btn-secondary disabled':''" type="submit" class="btn-block btn-primary" (click)='actualizarMultas()' >Actualizar</button>
+                        </ng-template>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+  </div>
 </ng-container>
 <ng-container *ngIf="tipoContribucion==5">
 
