se agregaron las rutas de editar para cada contribucion

--- a/src/app/shared/components/contribuciones/contribucion-multas-ebriedad/contribucion-multas-ebriedad.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-multas-ebriedad/contribucion-multas-ebriedad.component.html
@@ -67,7 +67,7 @@
               <button
                 type="button"
                 name="editar"
-
+                [routerLink]="['/formulario-contribucion',contribucion.nivelContribucion,contribucion.codigo_contribucion]"
                 class="btn btn-primary btn-sm"
 
               >
