--- a/src/app/shared/components/contribuciones/contribucion-multas-vehicular/contribucion-multas-vehicular.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-multas-vehicular/contribucion-multas-vehicular.component.html
@@ -72,7 +72,7 @@
               <button
                 type="button"
                 name="editar"
-
+                [routerLink]="['/formulario-contribucion',contribucion.nivelContribucion,contribucion.codigo_contribucion]"
                 class="btn btn-primary btn-sm"
 
               >
