se corrigio un error de direccionamiento

--- a/src/app/shared/components/contribuciones/contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/contribuciones.component.html
@@ -26,7 +26,7 @@
         />
       </div>
       <div class="col-auto">
-        <a class="ms-auto links" href="">Agregar contribucion</a>
+        <a class="ms-auto links" routerLink="/formulario-contribucion">Agregar contribucion</a>
       </div>
   </div>
 
