--- a/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
@@ -1,8 +1,17 @@
-<ng-container *ngIf="tipoContribucion==1">
+
+<ng-container *ngIf="tipoContribucion==1 || seleccionada==1">
   <div class="container-fluid  mx-auto">
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
+              <mat-form-field >
+                <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
+                <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
+                  <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
+                    {{tContribuciones.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
                 <h5 class="text-center mb-4">AÑADIR IMPUESTO CONTRIBUCION</h5>
 
                 <form class="form-card">
@@ -48,11 +57,19 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="tipoContribucion==2">
+<ng-container *ngIf="tipoContribucion==2 || seleccionada==2">
   <div class="container-fluid  mx-auto">
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
+              <mat-form-field >
+                <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
+                <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
+                  <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
+                    {{tContribuciones.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
                 <h5 class="text-center mb-4">AÑADIR DERECHO GENERAL  CONTRIBUCION</h5>
 
                 <form class="form-card">
@@ -106,11 +123,19 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="tipoContribucion==3">
+<ng-container *ngIf="tipoContribucion==3 || seleccionada==3">
   <div class="container-fluid  mx-auto">
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
+              <mat-form-field >
+                <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
+                <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
+                  <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
+                    {{tContribuciones.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
                 <h5 class="text-center mb-4">AÑADIR DERECHO LICENCIA  CONTRIBUCION</h5>
 
                 <form class="form-card">
@@ -159,11 +184,19 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="tipoContribucion==4">
+<ng-container *ngIf="tipoContribucion==4 || seleccionada==4">
   <div class="container-fluid  mx-auto">
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
+              <mat-form-field >
+                <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
+                <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
+                  <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
+                    {{tContribuciones.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
                 <h5 class="text-center mb-4">AÑADIR MULTA GENERAL CONTRIBUCION</h5>
 
                 <form class="form-card">
@@ -209,11 +242,19 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="tipoContribucion==5">
+<ng-container *ngIf="tipoContribucion==5 || seleccionada==5">
   <div class="container-fluid  mx-auto">
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
+              <mat-form-field >
+                <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
+                <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
+                  <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
+                    {{tContribuciones.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
                 <h5 class="text-center mb-4">AÑADIR MULTA EBRIEDAD CONTRIBUCION</h5>
 
                 <form class="form-card">
@@ -264,11 +305,19 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="tipoContribucion==6">
+<ng-container *ngIf="tipoContribucion==6 || seleccionada==6">
   <div class="container-fluid  mx-auto">
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
+              <mat-form-field >
+                <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
+                <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
+                  <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
+                    {{tContribuciones.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
                 <h5 class="text-center mb-4">AÑADIR MULTA VEHICULAR CONTRIBUCION</h5>
 
                 <form class="form-card">
@@ -327,11 +376,19 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="tipoContribucion==7">
+<ng-container *ngIf="tipoContribucion==7 || seleccionada==7">
   <div class="container-fluid  mx-auto">
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
+              <mat-form-field >
+                <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
+                <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
+                  <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
+                    {{tContribuciones.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
                 <h5 class="text-center mb-4">AÑADIR OTROS PRODUCTOS CONTRIBUCION</h5>
 
                 <form class="form-card">
