--- a/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
@@ -62,7 +62,7 @@
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
-                <mat-form-field *ngIf="!idFound">
+                <mat-form-field *ngIf="!idFound && !banderaTipo">
                   <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
                   <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
                     <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
@@ -128,7 +128,7 @@
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
-              <mat-form-field *ngIf="!idFound">
+              <mat-form-field *ngIf="!idFound && !banderaTipo">
                 <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
                 <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
                   <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
@@ -189,7 +189,7 @@
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
-              <mat-form-field *ngIf="!idFound">
+              <mat-form-field *ngIf="!idFound && !banderaTipo">
                 <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
                 <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
                   <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
@@ -247,7 +247,7 @@
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
-              <mat-form-field *ngIf="!idFound">
+              <mat-form-field *ngIf="!idFound && !banderaTipo">
                 <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
                 <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
                   <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
@@ -310,7 +310,7 @@
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
-              <mat-form-field *ngIf="!idFound">
+              <mat-form-field *ngIf="!idFound && !banderaTipo">
                 <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
                 <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
                   <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
@@ -381,7 +381,7 @@
     <div class="row d-flex justify-content-center">
         <div class=" col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
-              <mat-form-field *ngIf="!idFound">
+              <mat-form-field *ngIf="!idFound && !banderaTipo">
                 <mat-label class="">TIPO CONTRIBUCIÓN</mat-label>
                 <mat-select (valueChange)="onChange($event)" name="tipo" [(ngModel)]="seleccionada">
                   <mat-option *ngFor="let tContribuciones of contribucionesTipos" [value]="tContribuciones.value">
