--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,7 +80,7 @@
                 <div class="col-2">
                   <i class="fas fa-address-book"></i>
                 </div>
-                <div class="col-9">Agregar Palacio</div>
+                <div class="col-9">Usuarios</div>
               </div>
             </a>
           </li>
