--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
             </a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link" href="/">
+            <a class="navigation-link" routerLink="empleados">
               <div class="row">
                 <div class="col-2">
                   <i class="fas fa-calendar-alt"></i>
