se borro el boton de busqueda

--- a/src/app/shared/components/empleados/empleados.component.html
+++ b/src/app/shared/components/empleados/empleados.component.html
@@ -2,6 +2,7 @@
   <div
     class="form-inline my-2 my-lg-0 align-items-center justify-content-between"
   >
+  <div><h1></h1></div>
     <div>
       <input
         class="form-control mr-sm-2 busqueda text-center"
@@ -12,9 +13,6 @@
         (keyup)="onSearh()"
         [(ngModel)]="termino"
       />
-      <button class="btn btn-outline-success"  type="submit">
-        <i class="fas fa-search"></i>
-      </button>
     </div>
     <div>
       <button type="button"  class="btn boton-principal"
