boton eliminar funcionando

--- a/src/app/shared/components/empleados/empleados.component.html
+++ b/src/app/shared/components/empleados/empleados.component.html
@@ -94,7 +94,7 @@
                 type="button"
                 name="eliminar"
                 class="btn btn-danger btn-sm"
-
+                (click)="eliminarEmpleado(empleado)"
               >
                 <i class="fas fa-trash-alt"></i>
               </button>
